Added new fields to form

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -16,8 +16,18 @@
   </p>
 
   <p>
+    <%= f.label :restaurant, "Restaurant's name"  %>
+    <%= f.text_field :restaurant %>
+  </p>
+
+  <p>
     <%= f.label :body, "Detailed review"  %>
     <%= f.text_area :body %>
+  </p>
+
+  <p>
+    <%= f.label :ambiance, "Ambiance"  %>
+    <%= f.text_field :ambiance %>
   </p>
 
   <p>
