Added price and cuisine form fields

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -26,6 +26,16 @@
   </p>
 
   <p>
+    <%= f.label :cuisine, "Cuisine type"  %>
+    <%= f.text_field :cuisine %>
+  </p>
+
+  <p>
+    <%= f.label :price, "Price"  %>
+    <%= f.number_field :price %>
+  </p>
+
+  <p>
     <%= f.label :ambiance, "Ambiance"  %>
     <%= f.text_field :ambiance %>
   </p>
