--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -32,7 +32,7 @@
 
   <p>
     <%= f.label :price, "Price"  %>
-    <%= f.number_field :price %>
+    <%= f.number_field :price, within: 1..3 %>
   </p>
 
   <p>
