--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,14 +1,24 @@
 <% content_for :page_title, "Homepage - " %>
 
 <nav class="filters">
-  <%= link_to "All reviews", root_path %>
-  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
-  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
-  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
+  <div>
+    <%= active_link_to "All reviews", root_path, active: {price: nil, cuisine: nil, location: nil} %>
+    <%= active_link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location), active: { price: 1 } %>
+    <%= active_link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location), active: {price: 2} %>
+    <%= active_link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location), active: {price: 3} %>
+  </div>
 
-  <%= link_to "Indian", root_path(cuisine: "Indian", price: @price) %>
-  <%= link_to "Mexican", root_path(cuisine: "Mexican", price: @price) %>
-  <%= link_to "Italian", root_path(cuisine: "Italian", price: @price) %>
+  <div>
+    <%= active_link_to "Indian", root_path(cuisine: "Indian", price: @price, location: @location), active: {cuisine: "Indian"} %>
+    <%= active_link_to "Mexican", root_path(cuisine: "Mexican", price: @price, location: @location), active: {cuisine: "Mexican"} %>
+    <%= active_link_to "Italian", root_path(cuisine: "Italian", price: @price, location: @location), active: {cuisine: "Italian"} %>
+  </div>
+
+  <form action="/">
+    <input type="text" name="location" placeholder="Search the location..." value="<%= @location %>"/>
+    <input type="hidden" name="price" value="<%= @price %>"
+    <input type="hidden" name="cuisine" value="<%= @cuisine %>"
+  </form>
 
 </nav>
 
