--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -12,10 +12,10 @@
 
   <%= f.input :title %>
   <%= f.input :restaurant %>
-  <%= f.input :address %>
+  <%= f.input :address, as: :string %>
   <%= f.input :body %>
   <%= f.input :cuisine %>
-  <%= f.input :price, collection: 1..3 %>
+  <%= f.input :price, as: :radio_buttons, collection: [['$', '1'], ['$$', '2'], ['$$$', '3']] %>
   <!-- <p>
     <%= f.label :price, "Price"  %>
     <%= f.number_field :price, within: 1..3 %>
