Hooked up users with reviews and comments

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -40,7 +40,12 @@
   <div class="comment">
     <%= simple_format comment.body %>
     <p class="posted">
-      Posted <%= time_ago_in_words comment.created_at %> ago
+      Posted <%= time_ago_in_words comment.created_at %> ago • by
+      <% if comment.user.present? %>
+        <%= comment.user.username %>
+      <% else %>
+        anonymous
+      <% end %>
     </p>
   </div>
 <% end %>
