--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,6 +7,15 @@
   <%= @review.score %> / 10
 </div>
 
+<div class="user">
+    Posted by
+    <% if @review.user.present? %>
+        <%= link_to @review.user.username, user_path(@review.user) %>
+    <% else %>
+        anonymous
+    <% end %>
+</div>
+
 <% if @review.ambiance.present? %>
   <div class="ambiance">
     <%= @review.ambiance %>
@@ -29,10 +38,13 @@
   <%= simple_format @review.body %>
 </div>
 
-<div class="actions">
-  <%= link_to "Edit this review", edit_review_path(@review) %>
-  <%= link_to "Delete this review", review_path(@review), method: :delete, data: {confirm: "Are you sure?"} %>
-</div>
+<!-- Remove it if it's not the user who is involved -->
+<% if @review.user == @current_user %>
+    <div class="actions">
+      <%= link_to "Edit this review", edit_review_path(@review) %>
+      <%= link_to "Delete this review", review_path(@review), method: :delete, data: {confirm: "Are you sure?"} %>
+    </div>
+<% end %>
 
 
 <h3>Comments</h3>
@@ -42,7 +54,7 @@
     <p class="posted">
       Posted <%= time_ago_in_words comment.created_at %> ago • by
       <% if comment.user.present? %>
-        <%= comment.user.username %>
+        <%= link_to comment.user.username, user_path(comment.user) %>
       <% else %>
         anonymous
       <% end %>
