Image upload functionality

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -25,9 +25,11 @@
 <% @reviews.each do |review| %>
     <div class="review">
       <%= link_to review_path(review) do %>
+        <%= image_tag review.photo.thumb %>
+
         <h2><%= review.title %></h2>
         <p>
-          <%= review.cuisine %> - <%= pluralize review.comments.count, "comment" %> 
+          <%= review.cuisine %> - <%= pluralize review.comments.count, "comment" %>
         </p>
 
       <% end %>
