--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,8 @@
 <% content_for :page_title, @review.title %>
 
+
+<%= image_tag @review.photo.medium  %>
+
 <h1><%= @review.title %></h1>
 <h2><%= @review.restaurant %></h2>
 
