--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,6 +14,7 @@
   <%= f.input :restaurant %>
   <%= f.input :address, as: :string %>
   <%= f.input :body %>
+  <%= f.input :photo %>
   <%= f.input :cuisine %>
   <%= f.input :price, as: :radio_buttons, collection: [['$', '1'], ['$$', '2'], ['$$$', '3']] %>
   <!-- <p>
