--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<%= image_tag @user.avatar.medium %>
+<% if @user.avatar.present? %>
+  <%= image_tag @user.avatar.medium %>
+<% end %>
 
 <h2><%= @user.username %></h2>
 
