--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
             <%= link_to "Admin panel", admin_root_path  %>
           <% end %>
           <%= link_to "Add a review", new_review_path %>
+          <%= link_to "Edit account", edit_account_path %>
           <%= link_to "Log out", session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign up", new_user_path %>
