Added flash message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,12 @@
       </nav>
     </header>
 
+    <% if flash[:success].present? %>
+      <div class="success">
+        <%= flash[:success] %>
+      </div>
+    <% end %>
+
     <main>
       <%= yield %>
     </main>
